<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-2018, Virgil Security, Inc.
  ~
  ~ Lead Maintainer: Virgil Security Inc. <support@virgilsecurity.com>
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~     (1) Redistributions of source code must retain the above copyright notice, this
  ~     list of conditions and the following disclaimer.
  ~
  ~     (2) Redistributions in binary form must reproduce the above copyright notice,
  ~     this list of conditions and the following disclaimer in the documentation
  ~     and/or other materials provided with the distribution.
  ~
  ~     (3) Neither the name of virgil nor the names of its
  ~     contributors may be used to endorse or promote products derived from
  ~     this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srlRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/llMessageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/timberwolf"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/half_default_margin"
                android:paddingEnd="@dimen/half_default_margin"
                android:paddingStart="@dimen/default_margin"
                android:paddingTop="@dimen/half_default_margin">

                <EditText
                    android:id="@+id/etMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_rounded"
                    android:hint="@string/enter_your_message"
                    android:imeOptions="actionSend"
                    android:inputType="textCapSentences"
                    android:maxLines="3"
                    android:padding="@dimen/default_text"
                    android:paddingStart="@dimen/twenty_margin"
                    android:textColor="@color/oxford_blue"
                    android:textColorHint="@color/black_coral"
                    android:textSize="@dimen/default_text" />

                <ImageButton
                    android:id="@+id/btnSend"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/half_default_margin"
                    android:background="@drawable/bg_btn_chat_send"
                    android:gravity="center"
                    android:paddingStart="2dp"
                    android:text="@string/send"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/default_text"
                    app:srcCompat="@drawable/ic_send_white_24dp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/llMessageContainer"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:overScrollMode="never" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_messages"
            android:textColor="@color/black_coral"
            android:textSize="@dimen/increased_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/error_loading"
            android:textColor="@color/oxford_blue"
            android:textSize="@dimen/increased_text"
            android:visibility="gone" />
    </FrameLayout>
</android.support.v4.widget.SwipeRefreshLayout>
